test/libsolidity/syntaxTests/constructor/constructor_virtual.sol
contract C {
    constructor() virtual public {}
}
// ----
// TypeError: (17-48): Constructors cannot be virtual.
